--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
 .mainWeatherBackground {
     background-color: #f8f8f8;
 }
+
+.btn-danger {
+    background-color: #f8d7da !important;
+    color: #58151c !important;
+}
