--- a/public/style.css
+++ b/public/style.css
@@ -6,3 +6,8 @@
     background-color: #f8d7da !important;
     color: #58151c !important;
 }
+
+.golden {
+    background-color: rgba(255, 217, 0, 0.2);
+    color: black;
+}
